--- a/Dockerfile_dcrm
+++ b/Dockerfile_dcrm
@@ -5,4 +5,4 @@ RUN cd $GOPATH/src/github.com/fsn-dev
 RUN git clone https://github.com/fsn-dev/dcrm-walletService.git
 RUN cd dcrm-walletService && make
 WORKDIR /go/dcrm-walletService
-entrypoint ["./bin/cmd/gdcrm","--nodekey","node1.key"]
+ENTRYPOINT ["./bin/cmd/gdcrm","--nodekey","node1.key"]
